# Aurelius-v2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aurelius_cli/: __init__.py  scheduler_commands.py  v2_cli.py
docs/: CLI_V2_SPEC.md  CUA_PROTOCOL_V2.md  DAIES_V2_GATES.md  EXPORT_CONTRACTS.md  HARDWARE_PROFILES_V2.md  MODEL_CARD_V2.md  NATIVE_SKILLS_SPEC.md  RAM_VRAM_POLICY.md  RUNTIME_BACKENDS.md  SECURITY_THREAT_MODEL_V2.md  UI_MISSION_CONTROL_SPEC.md
src/: __init__.py
src/agent/: __init__.py  mcp_client.py  skill_trigger_engine.py  task_scheduler.py  workflow_graph.py
src/api/: __init__.py  requirements.txt  server.py
src/computer_use/: __init__.py  audit_log.py  driver_base.py  trajectory.py  verifier.py
src/decision/: __init__.py  action_heads.py  decision_head.py  prompt_templates.py
src/efficiency/: __init__.py  attention.py  compression.py  kv_cache.py  prefill.py
src/export/: __init__.py  converter.py
src/runtime/: __init__.py  backend_selector.py  capability_report.py  hardware_detector.py  memory_budget.py  profile_schema.py  test_runtime.py
src/skills/: __init__.py  curator.py  executor.py  manifest.py  permissions.py  registry.py  telemetry.py  validator.py
src/skills/builtin/coding/: __init__.py
src/skills/builtin/cua/: __init__.py
tests/: test_v2_surface.py
tests/agent/: test_mcp_client.py  test_skill_trigger_engine.py  test_task_scheduler.py  test_workflow_graph.py
ui/src/components/: DAIESDashboard.tsx  Dashboard.tsx  HardwareDashboard.tsx  ModelsHub.tsx  Settings.tsx  SkillCatalog.tsx
(+158 files in other folders)
